--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,80 @@ ul{
 }
 
 header nav{
-    /* background-color: red; */
-    height: 80px;
+    background-color: black;
+    height: 100px;
     width: 100%;
+    padding: 0px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+header nav .portfolio-logo {
+    margin-left: 20px;
+}
+
+header nav .portfolio-menu ul{
+    display: flex;
+    flex-direction: row;
+    margin-right: 60px;
+}
+
+header nav .portfolio-menu ul li a{
+    margin-left: 30px;
+    color: #fff;
+}
+
+main .title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 50vh;
+}
+
+main .title h1{
+    font-size: 50px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+main .title p {
+    font-size: 20px;
+    font-weight: 400;
+}
+
+main .sided-navigation {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    align-items: center;
+    justify-content: space-between;   
+}
+
+main .sided-navigation .languages ul li a{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #fff;
+    margin-bottom: 20px;
+    rotate: 270deg;
+}
+
+main .sided-navigation .social-media ul li a{
+    color: #fff;
+    margin-right: 60px;
+    margin-bottom: 20px;
+}
+
+main .sided-navigation .social-media img{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 20px;
+    height: 20px;
+    margin-top: 0px;
+    background-color: #fff;
 }
