--- a/CSS/style.css
+++ b/CSS/style.css
@@ -460,3 +460,221 @@ main .my-details .my-testimonials .active-testimonials .testimonial .testimonial
     margin-right: 40px;
     font-size: 16px;
 }
+
+/* End of About Page */
+
+/* Contact Page */
+
+main .contact-details .simple-title {
+    color: gray;
+    text-align: center;
+    margin-top: 20px;
+}
+
+main .contact-details h1 {
+    text-align: center;
+    margin-top: 10px;
+    font-size: 38px;
+    font-weight: 800;
+}
+
+main .contact-details .underinfo {
+    width: 170px;
+    border: 1px solid rgba(62, 240, 142, 0.87);
+    color: rgba(62, 240, 142, 0.87);
+    margin-left: 600px;
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
+
+main .contact-details .contact-session {
+    position: relative;
+    /* border: 1px solid red; */
+}
+main .contact-details .contact-session .contact-session-header {
+    margin-left: 30px;
+    margin-top: 20px;
+    font-size: 24px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+main .contact-details .contact-session .contact-form{
+    /* border: 1px solid yellow; */
+    margin-top: 20px;
+    height: 400px;
+    width: 650px;
+    margin-left: 10px;
+}
+
+main .contact-details .contact-session .contact-form input {
+
+    margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 260px;
+    height: 35px;
+    border: 1px solid rgb(36, 37, 37);
+    border-radius: 5px;
+    padding-left: 10px;
+    background-color: rgba(31, 30, 30, 0.781);
+    color: #fff;
+}
+
+main .contact-details .contact-session .contact-form .subject{
+
+    margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 580px;
+    height: 35px;
+    border: 1px solid rgba(36, 37, 37);
+    border-radius: 5px;
+    padding-left: 10px;
+}
+
+main .contact-details .contact-session .contact-form .message-here {
+    margin-top: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 580px;
+    height: 100px;
+    border: 1px solid rgba(36, 37, 37);
+    border-radius: 5px;
+    padding-left: 10px;
+    background-color: rgba(31, 30, 30, 0.781);
+    color: #fff;
+}
+
+main .contact-details .contact-session .contact-form textarea::placeholder{
+    color: #fff;
+    font-size: 14px;
+    opacity: 0.5;
+}
+
+main .contact-details .contact-session .contact-form input::placeholder {
+    color: #fff;
+    font-size: 14px;
+    opacity: 0.5;
+}
+
+main .contact-details .contact-session .contact-form button {
+    margin-top: 30px;
+    margin-left: 200px;
+    margin-right: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    width: 250px;
+    height: 40px;
+    border: 1px solid rgba(62, 240, 142, 0.87);
+    border-radius: 10px;
+    padding-left: 10px;
+    background-color: rgba(62, 240, 142, 0.87);
+    color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: 700;;
+}
+
+main .contact-details .contact-session .contact-info {
+    position: absolute;
+    margin-top: -450px;
+    margin-left: 700px;
+    font-size: 24px;
+    /* border: 1px solid yellow; */
+    width: 600px;
+    text-align: right;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+main .contact-details .contact-session .contact-informations {
+    position: absolute;
+    margin-top: -400px;
+    margin-left: 680px;
+    width: 650px;
+    height: 400px;
+    /* border: 1px solid yellow; */
+    font-size: 18px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+main .contact-details .contact-session .contact-informations .para-info{
+    margin-top: 20px;
+    margin-left: 200px;
+    margin-right: 40px;
+    width: 420px;
+    text-align: right;
+    height: 60px;
+    /* border: 1px solid rgba(36, 37, 37); */
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+main .contact-details .contact-session .contact-informations .letter-feel {
+    color: red;
+    font-size: 30px;
+    font-style: italic;
+    font-weight: 700;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+main .contact-details .contact-session .contact-informations .letter-me {
+    color: red;
+    font-size: 28px;
+    font-style: oblique;
+    font-weight: 700;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+main .contact-details .contact-session .contact-informations .address-icon-session .icons{
+    position: absolute;
+    margin-top: 30px;
+    margin-left: 240px;
+    width: 50px;
+    height: 220px;
+    /* border: 1px solid red; */
+    color: rgba(62, 240, 142, 0.87);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+
+/* --- above hr will be placed here --- */
+
+main .contact-details .contact-session .contact-informations .contact-hr {
+    position: absolute;
+    margin-top: 120px;
+    margin-left: -30px;
+    width: 340px;
+    rotate: 90deg;
+    border-style: dashed;
+    color: whitesmoke;
+}
+
+main .contact-details .contact-session .contact-informations .address-icon-session .info {
+    position: absolute;
+    margin-top: 20px;
+    /* border: 1px solid red; */
+    width: 320px;
+    height: 260px;
+    margin-left: 300px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+main .contact-details .contact-session .contact-informations .address-icon-session .info  h3{
+    margin-top: 10px;
+    margin-left: 10px;
+    font-size: 18px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+main .contact-details .contact-session .contact-informations .address-icon-session .info  p{
+    margin-top: 5px;
+    margin-left: 30px;
+    margin-bottom: 10px;
+    text-align: right;
+    font-size: 14px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
