--- a/CSS/style.css
+++ b/CSS/style.css
@@ -49,7 +49,7 @@ main .title{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 50vh;
+    margin-top: 10%;
 }
 
 main .title h1{
@@ -672,9 +672,9 @@ main .contact-details .contact-session .contact-informations .address-icon-sessi
 
 main .contact-details .contact-session .contact-informations .address-icon-session .info  p{
     margin-top: 5px;
-    margin-left: 30px;
+    margin-left: 10px;
     margin-bottom: 10px;
-    text-align: right;
+    text-align: left;
     font-size: 14px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
