new changes to files

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,16 +17,22 @@ ul{
     list-style: none;
 }
 
-.input-group span {
-    position: absolute;
-    right: 50px;
-    font-size: 14px;
-    color: red;
-    margin-top: 35px;
+.input-group  {
+    display: flex;
+    align-items: flex-end;
 }
 
+.input-group span {
+    font-size: 12px;
+    color: rgb(255, 5, 5);
+}
+
+
 #submit-error {
-    color: red;
+    color: rgb(255, 5, 5);
+    font-size: 14px;
+    margin-bottom: 30px;
+
 }
 
 header nav{
@@ -532,6 +538,29 @@ main .contact-details .contact-session .contact-form input {
     color: #fff;
 }
 
+
+main .contact-details .contact-session .contact-form input[type=text]:focus {
+    /* outline: none; */
+    outline: 1px solid whitesmoke;
+    outline-style: dotted;
+    outline-offset: -1px;
+}
+
+main .contact-details .contact-session .contact-form input[type=email]:focus {
+    /* outline: none; */
+    outline: 1px solid whitesmoke;
+    outline-style: dotted;
+    outline-offset: -1px;
+}
+
+main .contact-details .contact-session .contact-form textarea:focus {
+    /* outline: none; */
+    outline: 1px solid whitesmoke;
+    outline-style: dotted;
+    outline-offset: -1px;
+    padding: 10px;
+}
+
 main .contact-details .contact-session .contact-form .subject{
     margin-top: 30px;
     margin-left: 20px;
@@ -568,7 +597,7 @@ main .contact-details .contact-session .contact-form input::placeholder {
     opacity: 0.5;
 }
 
-main .contact-details .contact-session .contact-form button {
+main .contact-details .contact-session .contact-form .input-group button {
     margin-top: 30px;
     margin-left: 200px;
     margin-right: 20px;
@@ -581,7 +610,8 @@ main .contact-details .contact-session .contact-form button {
     background-color: rgba(62, 240, 142, 0.87);
     color: rgb(255, 255, 255);
     font-size: 18px;
-    font-weight: 700;;
+    font-weight: 700;
+    margin-bottom: 30px;
 }
 
 main .contact-details .contact-session .contact-info {
@@ -688,6 +718,13 @@ main .contact-details .contact-session .contact-informations .address-icon-sessi
     text-align: left;
     font-size: 14px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.input-group img {
+    background-color: rgb(149, 248, 149);
+    border-radius: 100%;
+    width: 40%;
+    height: 40%;
 }
 
 main .blog-title h1, p{
@@ -983,5 +1020,79 @@ main .office {
  main .office .video-section .office-video img{
     width: 100%;
     border-radius: 10px;
-
  }
+
+
+ /* Prtfolio Start */
+
+
+ main .portfolio-head p{
+    text-align: center;
+    font-size: 16px;
+    color: gray;
+ }
+
+  main .portfolio-head h1{
+    margin-top: 10px;
+    font-size: 38px;
+    font-weight: 700;
+    text-align: center;
+ }
+
+ main .portfolio-head .portfolio-line {
+    width: 150px;
+    text-align: center;
+    border: 1px solid rgba(62, 240, 142, 0.87); 
+    margin: 0 auto;   
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+main .portfolio-category {
+    border: 1px solid red;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+main .portfolio-category ul, li{
+    display: flex;
+    flex-direction: row;
+}
+
+
+main .portfolio-category a{
+    margin-left: 10px;
+    border: 1px solid blue;
+    text-align: center;
+    width: 100px;
+    height: 40px;
+    color: #fff;
+}
+
+main .items{
+    margin-top: 10px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.items .item{
+    width: 30%;
+    height: 400px;
+}
+
+.items .item .item-image img{
+    width: 100%;
+    height: 400px;
+}
+
+
+
+
