--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -98,6 +98,7 @@ footer .footer-container .login button{
     }
 
     .signin{
-        display:block
+        display:block;
+        margin-top: 20px;
     }
 }
